added isolated worker function

--- a/AzureFunctions/Func.HttpTriggered/Dockerfile
+++ b/AzureFunctions/Func.HttpTriggered/Dockerfile
@@ -1,7 +1,7 @@
 # See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 # This stage is used when running from VS in fast mode (Default for Debug configuration)
-FROM mcr.microsoft.com/azure-functions/dotnet:4-dotnet8.0 AS base
+FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0 AS base
 WORKDIR /home/site/wwwroot
 EXPOSE 8080
 
@@ -10,16 +10,16 @@ EXPOSE 8080
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["FuncApp.Demo.HttpTriggered/FuncApp.Demo.HttpTriggered.csproj", "FuncApp.Demo.HttpTriggered/"]
-RUN dotnet restore "./FuncApp.Demo.HttpTriggered/FuncApp.Demo.HttpTriggered.csproj"
+COPY ["Func.HttpTriggered/Func.HttpTriggered.csproj", "Func.HttpTriggered/"]
+RUN dotnet restore "./Func.HttpTriggered/Func.HttpTriggered.csproj"
 COPY . .
-WORKDIR "/src/FuncApp.Demo.HttpTriggered"
-RUN dotnet build "./FuncApp.Demo.HttpTriggered.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/Func.HttpTriggered"
+RUN dotnet build "./Func.HttpTriggered.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./FuncApp.Demo.HttpTriggered.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./Func.HttpTriggered.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
