--- a/AzureFunctions/Func.HttpTriggered/Properties/launchSettings.json
+++ b/AzureFunctions/Func.HttpTriggered/Properties/launchSettings.json
@@ -1,13 +1,14 @@
 {
   "profiles": {
-    "FuncApp.Demo.HttpTriggered": {
+    "Func.HttpTriggered": {
       "commandName": "Project",
-      "commandLineArgs": "--port 7141"
+      "commandLineArgs": "--port 7054"
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
-      "httpPort": 30532,
+      "containerRunArguments": "--init",
+      "httpPort": 31725,
       "useSSL": false
     }
   }
